# story_painter_desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.h
.github/workflows/: build.yml
